<resources>
    <string name="app_name">BonPix</string>
    <string name="impressum_version_nummer">Version 0.5 BETA</string>
    <string name="impressum_version_stand">Stand: 12.06.2017</string>
    <string name="waehrung">€</string>
    <string name="title_a_main">BonPix</string>
    <string name="title_tab1">HOME</string>
    <string name="title_tab2">STATISTIK</string>
    <string name="title_tab3">BONS</string>
    <string name="foto_button"> Foto </string>
    <string name="manuell_button"> Manuell </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_budget">Budget</string>
    <string name="nav_gruppen">Gruppen</string>
    <string name="nav_favoriten">Favoriten</string>
    <string name="nav_garantie">Garantie</string>
    <string name="nav_einstellungen">Einstellungen</string>
    <string name="nav_laeden">Läden</string>
    <string name="nav_title">onPix</string>
    <string name="nav_impressum">App Informationen</string>
    <string name="currency_europe">€</string>
    <string name="percentage">%</string>
    <string name="title_budget_screen">Budget</string>
    <string name="title_gruppen_screen">Gruppen</string>
    <string name="title_favoriten_screen">Favoriten</string>
    <string name="a_favoriten_laden_name">Laden name</string>
    <string name="a_favoriten_datum">Datum des Bon</string>
    <string name="a_favoriten_preis">Preis</string>
    <string name="title_garantie_screen">Garantie</string>
    <string name="a_garantie_garantie_bis">Garantie bis</string>
    <string name="title_einstellungen_screen">Einstellungen</string>
    <string name="menu_einstellungen_version">Version</string>
    <string name="einstellungen_default_name">Hubert</string>
    <string name="einstellungen_default_email">Hubert@gmx.de</string>
    <string name="einstellungen_action_bar_desc">Einstellungen</string>
    <string name="einstellungen_action_bar_title">Einstellungen</string>
    <string name="einstellungen_hilfe_titel">Hilfe</string>
    <string name="einstellungen_hilfe_tutorial_titel">Apptutorial</string>
    <string name="einstellungen_hilfe_tutorial_beschreibung">Hier kann das Apptutorial gestartet werden</string>
    <string name="einstellungen_notification">Notification</string>
    <string name="einstellungen_notification_title">Benachrichtigungen</string>
    <string name="einstellungen_notification_text">Aktivieren oder Deaktivieren der Benachrichtigungen</string>
    <string name="einstellungen_daten_title">Daten</string>
    <string name="einstellungen_backup_title">Backup</string>
    <string name="einstellungen_backup_beschreibung">Hier können Backups erstellt werden</string>
    <string name="title_backup_screen">Backup</string>
    <string name="backup_action_bar_desc">Backup</string>
    <string name="backup_action_bar_title">Backup</string>
    <string name="title_version_screen">App Informationen</string>
    <string name="title_impressum_version">BonPix</string>
    <string name="title_impressum_kontakt">Kontakt</string>
    <string name="impressum_kontakt">Hochschule Augsburg \nAn der Hochschule 1 \n86161 Augsburg</string>
    <string name="title_manuell_screen">Bon hinzufügen</string>
    <string name="a_ocr_manuell_save">SPEICHERN</string>
    <string name="a_ocr_manuell_bildauswahl">Bild hinzufügen …</string>
    <string name="a_ocr_manuell_pop_up_title">Kassenbon</string>
    <string name="a_ocr_manuell_pop_up_message">Sollen Ihre Eingaben übernommen werden?</string>
    <string name="a_ocr_manuell_pop_up_confirm">Bestätigen</string>
    <string name="a_ocr_manuell_pop_up_cancel">Abbruch</string>
    <string name="a_ocr_manuell_date_button_set">Set Date</string>
    <string name="a_ocr_manuell_date_selected" />
    <string name="a_ocr_manuell_hint_anschrift">Adresse (optional)</string>
    <string name="a_ocr_manuell_hint_sonstiges">Sonstige Infos (optional)</string>
    <string name="a_ocr_manuell_hint_sonstige_infos">Sonstige Infos</string>
    <string name="a_ocr_manuell_hint_artikel_name">Artikel Name</string>
    <string name="a_ocr_manuell_hint_preis">Preis</string>
    <string name="a_ocr_manuell_button_add_new">Artikel hinzufügen</string>
    <string name="a_ocr_manuell_button_delete_row_description">Delete</string>
    <string name="a_ocr_manuell_garantie_laenge">Garantielänge (Jahre)</string>
    <string name="a_ocr_manuell_back_behavior_title">Bon anlegen verlassen?</string>
    <string name="a_ocr_manuell_back_behavior_message">Wollen Sie wirklich diese Maske verlassen ohne zu speichern?\n\nWARNUNG: Es gehen alle eingaben verloren!</string>
    <string name="a_ocr_manuell_back_behavior_ok_button">Verlassen</string>
    <string name="a_ocr_manuell_back_behavior_edit_title">Bon wurde editiert</string>
    <string name="a_ocr_manuell_back_behavior_edit_message">Wollen Sie den Bon speichern vor dem verlassen?</string>
    <string name="a_ocr_manuell_back_behavior_edit_dont_save_button">Verlassen</string>
    <string name="a_ocr_manuell_back_behavior_edit_save_button">Speichern</string>
    <string name="c_ocr_kassenzettel_nicht_erkannt">Der Kassenzettel wurde leider nicht erkannt</string>
    <string name="title_max_bon_pic_screen">Bon</string>
    <string name="title_show_recognition_screen">Ausgabe</string>
    <string name="title_activity_a__laeden">Läden</string>
    <string name="a_laeden_alert_dialog_title_hint">Laden eingeben ...</string>
    <string name="a_laeden_alert_dialog_title">Laden hinzufügen</string>
    <string name="a_laeden_alert_dialog_cancel">ABBRUCH</string>
    <string name="a_laeden_alert_dialog_ok">BESTÄTIGEN</string>
    <string name="a_laeden_alert_dialog_toast1">Laden bereits vorhanden! Bitte geben Sie einen anderen Wert ein.</string>
    <string name="a_laeden_alert_dialog_toast2">Leere Eingabe! Bitte erneut versuchen.</string>
    <string name="f_laeden_detail_titel_hint">Laden eingeben ...</string>
    <string name="f_laeden_detail_delete_titel">Achtung </string>
    <string name="f_laeden_detail_delete_message"> wird GELÖSCHT! \n\nWenn Sie Bestätigen werden alle zugeordneten Bons entfernt!</string>
    <string name="f_laeden_detail_cancel">ABBRUCH</string>
    <string name="f_laeden_detail_ok">BESTÄTIGEN</string>
    <string name="f_laeden_detail_delete_toast1">Laden</string>
    <string name="f_laeden_detail_delete_toast2">wurde gelöscht!</string>
    <string name="f_laeden_detail_save_titel">Ladenname ändern</string>
    <string name="f_laeden_detail_save_message">Sollen Ihre Eingaben übernommen werden?</string>
    <string name="f_laeden_detail_save_toast">Laden bereits vorhanden! Bitte geben Sie einen anderen Wert ein.</string>
    <string name="f_laeden_detail_save_save_toast">Laden geändert</string>
    <string name="action_settings_search">Suchen</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_budget_edit">Budget Planung</string>
    <string name="a_budget_edit_speichern">Speichern</string>
    <string name="a_budget_edit_titel">Titel eingeben…</string>
    <string name="a_budget_edit_betrag">Betrag eingeben…</string>
    <string name="a_budget_edit_vondatum">Zeitraum (Beginn)…</string>
    <string name="a_budget_edit_bisdatum">Zeitraum (Ende)…</string>
    <string name="a_budget_edit_sonstiges">Sonstiges (optional)…</string>
    <string name="a_budget_edit_vonbis_error">Von-Datum liegt hinter Bis-Datum</string>
    <string name="a_budget_edit_favorite">Auf Home Tab anzeigen</string>
    <string name="a_budget_edit_home_warning_title">Budget auf Home Tab anzeigen</string>
    <string name="a_budget_edit_home_warning">\nWollen Sie wirklich dieses Budget auf dem Home Tab anzeigen? \n\nINFO: Es kann nur ein Budget gleichzeitig auf dem Home Tab angezeigt werden!</string>
    <string name="wochentag_1">Sonntag</string>
    <string name="wochentag_2">Montag</string>
    <string name="wochentag_3">Dienstag</string>
    <string name="wochentag_4">Mittwoch</string>
    <string name="wochentag_5">Donnerstag</string>
    <string name="wochentag_6">Freitag</string>
    <string name="wochentag_7">Samstag</string>
    <string name="title_a_statistik_tab_all">Alle</string>
    <string name="title_a_statistik_tab_days">Woche</string>
    <string name="title_a_statistik_tab_month">Monat</string>
    <string name="title_a_statistik_tab_years">Quartal</string>
    <string name="title_a_statistik_pie_chart">Bons pro Laden</string>
    <string name="title_a_statistik_line_chart">Ausgaben pro Tag</string>
    <string name="title_a_statistik_bar_chart">Ausgaben pro Laden</string>
    <string name="title_a_statistik_combined_chart">Allgemein</string>
    <string name="statistik_card_general_title">Allgemeiner Überblick aller Bons</string>
    <string name="statistik_card_general_scans_title">Eingescannte \nBons</string>
    <string name="statistik_card_general_scans_content">Anzahl</string>
    <string name="statistik_card_general_costs_title">Gesamte \nAusgaben</string>
    <string name="statistik_card_general_costs_content">Betrag</string>
    <string name="statistik_card_general_marketamount_title">Läden</string>
    <string name="statistik_card_general_marketamount_content">Anzahl</string>
    <string name="statistik_card_general_productamount_title">Artikel</string>
    <string name="statistik_card_general_productamount_content">Anzahl</string>
    <string name="statistik_card_topproducts_title">Meist gekaufte Artikel</string>
    <string name="statistik_card_topproducts_article_one">Artikel 1</string>
    <string name="statistik_card_topproducts_article_two">Artikel 2</string>
    <string name="statistik_card_topproducts_article_three">Artikel 3</string>
    <string name="statistik_card_topproducts_percentage">%</string>
    <string name="statistik_card_topfacts_title">Top Fakten</string>
    <string name="statistik_card_topfacts_fact_one_content">Inhalt</string>
    <string name="statistik_card_topfacts_fact_articles_titles">Artikel:</string>
    <string name="statistik_card_topfacts_fact_articles_count">ARTIKELANZAHL</string>
    <string name="statistik_card_topfacts_fact_three_content">Betrag</string>
    <string name="statistik_card_topfacts_fact_one_title">Meistbesuchter \nLaden</string>
    <string name="statistik_card_topfacts_fact_bons_title">Bons:</string>
    <string name="statistik_card_topfacts_fact_bons_count">BONSANZAHL</string>
    <string name="statistik_card_topfacts_fact_three_title">Durchschn. \nAusgaben:</string>
    <string name="statistik_card_rest_value">Sonstige</string>
    <string name="statistik_card_line_chart_title">Ausgaben pro Tag</string>
    <string name="tab_home_boncard_title_content">Letzte eingescannte Bons</string>
    <string name="tab_home_budgetcard_title_content">Wichtigste Budgetplanung</string>
    <string name="tab_home_chartcard_line_title_content">Ausgaben letzter eingescannter Bons</string>
    <string name="tab_home_chartcard_budget_default_content"> Fügen sie zuerst ein Budget hinzu ...</string>
    <string name="tab_home_chartcard_boncard_default_content"> Fügen Sie  weitere Bons hinzu ...</string>
    <string name="tab_home_boncard_bon_content">default</string>
    <string name="title_bon_anzeigen">Bon Anzeigen</string>
    <string name="bon_anzeigen_laden_title">Laden:</string>
    <string name="bon_anzeigen_adresse_title">Adresse:</string>
    <string name="bon_anzeigen_datum_title">Datum:</string>
    <string name="bon_anzeigen_gesbetrag_title">Gesamtbetrag:</string>
    <string name="bon_anzeigen_garantie_title">Garantie (Ende):</string>
    <string name="bon_anzeigen_laden">Supermarkt XY</string>
    <string name="bon_anzeigen_adresse">Max-Mustermann-Str. XB</string>
    <string name="bon_anzeigen_datum">0X.0X.20XX</string>
    <string name="bon_anzeigen_gesbetrag">XOOCB.00 €</string>
    <string name="bon_anzeigen_garantie">0X.0X.20XX</string>
</resources>