<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:key="settings_screen">

    <PreferenceCategory
        android:title="@string/einstellungen_notification"
        android:key="category_notifications">

        <CheckBoxPreference
            android:key="pref_notifications"
            android:summary="@string/einstellungen_notification_text"
            android:title="@string/einstellungen_notification_title"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/einstellungen_daten_title"
        android:key="category_data">

        <Preference android:title="@string/einstellungen_backup_title"
            android:key="pref_backup"
            android:summary="@string/einstellungen_backup_beschreibung"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/einstellungen_hilfe_titel"
        android:key="category_data">

        <Preference android:title="@+string/einstellungen_hilfe_tutorial_titel"
            android:key="category_tutorial"
            android:summary="@+string/einstellungen_hilfe_tutorial_beschreibung"/>

    </PreferenceCategory>
</PreferenceScreen>