<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_nav_drawer_gruppe_allgemein"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_budget"
            android:icon="@mipmap/ic_attach_money_black_24dp"
            android:title="@string/nav_budget" />

        <!--<item
            android:id="@+id/menu_nav_gruppen"
            android:icon="@mipmap/ic_group_black_24dp"
            android:title="@string/nav_gruppen" /> -->

        <item
            android:id="@+id/menu_nav_favoriten"
            android:icon="@mipmap/ic_favorite_border_black_24dp"
            android:title="@string/nav_favoriten" />

        <item
            android:id="@+id/menu_nav_garantie"
            android:icon="@mipmap/ic_build_black_24dp"
            android:title="@string/nav_garantie" />

        <item
            android:id="@+id/menu_nav_laeden"
            android:icon="@mipmap/ic_shopping_cart_black_24dp"
            android:title="@string/nav_laeden" />

    </group>

    <group android:id="@+id/menu_nav_drawer_gruppe_einstellungen"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_einstellungen"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/nav_einstellungen" />

    </group>





</menu>
