<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginRight="3dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/toolbar"
            android:id="@+id/statistik_card_topfacts_relative_layout">

            <TextView
                android:id="@+id/statistik_card_productamount_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/view"
                android:layout_alignTop="@+id/statistik_card_marketamount_content"
                android:layout_toEndOf="@+id/statistik_card_marketamount_content"
                android:text="@string/statistik_card_general_productamount_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/statistik_card_productamount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/statistik_card_marketamount_title"
                android:layout_alignBottom="@+id/statistik_card_marketamount_title"
                android:layout_alignEnd="@+id/statistik_card_productamount_content"
                android:layout_alignStart="@+id/view3"
                android:text="@string/statistik_card_general_productamount_title"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statistik_card_marketamount_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/statistik_card_general_scans_content"
                android:layout_alignEnd="@+id/view3"
                android:layout_alignStart="@+id/view2"
                android:layout_marginBottom="-8dp"
                android:text="@string/statistik_card_general_marketamount_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/statistik_card_marketamount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/statistik_card_general_scans_content"
                android:layout_alignEnd="@+id/view3"
                android:layout_alignStart="@+id/view2"
                android:text="@string/statistik_card_general_marketamount_title"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statistik_card_general_costs_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/statistik_card_general_costs_title"
                android:layout_alignEnd="@+id/view"
                android:layout_alignTop="@+id/statistik_card_general_costs_title"
                android:layout_toEndOf="@+id/statistik_card_general_costs_title"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/statistik_card_general_costs_content"
                android:textAlignment="center"
                android:maxLength="10"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/statistik_card_general_costs_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view2"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="19dp"
                android:layout_toStartOf="@+id/statistik_card_productamount_title"
                android:text="@string/statistik_card_general_costs_title"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statistik_card_general_scans_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view3"
                android:layout_alignEnd="@+id/view2"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="11dp"
                android:text="@string/statistik_card_general_scans_content"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="26sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />


            <View
                android:id="@+id/view3"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="235dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="145dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="85dp"
                android:background="@android:color/darker_gray"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/statistik_card_general_scans_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/view2"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/view"
                android:text="@string/statistik_card_general_scans_title"
                android:textAlignment="center" />

        </RelativeLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/statistik_card_general_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/statistik_card_general_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_above="@+id/statistik_card_topfacts_relative_layout" />
    </RelativeLayout>




</android.support.v7.widget.CardView>