<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.projektss17.bonpix.A_Bon_Anzeigen"
    android:background="@color/cardview_light_background">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <ImageButton
                android:id="@+id/bon_anzeigen_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="105dp"
                android:background="@color/colorPrimary"
                app:srcCompat="@mipmap/ic_delete_white_24dp" />

            <ImageButton
                android:id="@+id/bon_anzeigen_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="60dp"
                android:background="@color/colorPrimary"
                app:srcCompat="@mipmap/ic_mode_edit_white_24dp" />

            <ImageButton
                android:id="@+id/bon_anzeigen_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:background="@color/colorPrimary"
                app:srcCompat="@mipmap/ic_info_white_24dp" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/bon_anzeigen_card_view"
        app:cardBackgroundColor="@color/colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="314dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/header_bon">

            <ImageView
                android:id="@+id/bon_anzeigen_picture"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:clickable="true"
                app:srcCompat="@mipmap/bonpix_big_transparent" />

            <TextView
                android:id="@+id/bon_anzeigen_ladenname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/bon_anzeigen_picture"
                android:layout_marginStart="61dp"
                android:layout_toEndOf="@+id/bon_anzeigen_picture"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_laden_title"
                android:maxLength="25"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bon_anzeigen_ladenname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_ladenname_title"
                android:layout_below="@+id/bon_anzeigen_ladenname_title"
                android:textColor="@color/cardview_light_background"
                android:maxLength="25"
                android:text="@string/bon_anzeigen_laden"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/bon_anzeigen_datum_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_ladenname"
                android:layout_below="@+id/bon_anzeigen_ladenname"
                android:layout_marginTop="8dp"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_datum_title"
                android:maxLength="25"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bon_anzeigen_datum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_ladenname"
                android:layout_below="@+id/bon_anzeigen_datum_title"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_datum"
                android:maxLength="25"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/bon_anzeigen_adresse_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_ladenname"
                android:layout_below="@+id/bon_anzeigen_datum"
                android:layout_marginTop="8dp"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_adresse_title"
                android:maxLength="25"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bon_anzeigen_adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_adresse_title"
                android:layout_below="@+id/bon_anzeigen_adresse_title"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_adresse"
                android:maxLength="50"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/bon_anzeigen_gesbetrag_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/bon_anzeigen_gesbetrag_title"
                android:maxLength="15"
                android:textStyle="bold"
                android:layout_below="@+id/bon_anzeigen_picture"
                android:layout_alignStart="@+id/bon_anzeigen_picture" />

            <TextView
                android:id="@+id/bon_anzeigen_gesbetrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_gesbetrag_title"
                android:layout_below="@+id/bon_anzeigen_gesbetrag_title"
                android:text="@string/bon_anzeigen_gesbetrag"
                android:textSize="19sp"
                android:maxLength="15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bon_anzeigen_garantie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_datum"
                android:layout_alignTop="@+id/bon_anzeigen_gesbetrag_title"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_garantie_title"
                android:maxLength="15"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/bon_anzeigen_garantie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/bon_anzeigen_garantie_title"
                android:layout_below="@+id/bon_anzeigen_garantie_title"
                android:textColor="@color/cardview_light_background"
                android:text="@string/bon_anzeigen_garantie"
                android:maxLength="10"
                android:textSize="19sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/bon_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="255dp">

    </android.support.v7.widget.RecyclerView>

</android.support.design.widget.CoordinatorLayout>